[package]
name = "gidle_future"
version = "0.1.0"
authors = ["Rodrigo Rivas Costa <rodrigorivascosta@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A future executor for the glib main loop idle time"
readme = "README.md"
categories = ["asynchronous", "no-std"]
keywords = ["async", "await", "idle", "glib", "gtk-rs", "gui"]
repository = "https://github.com/rodrigorc/gidle_future"
documentation = "https://docs.rs/gidle_future"

[dependencies]
glib = "^0.9.0"
futures = "^0.3.5" 
